# CARD_SAT

./: #auto_saved_files#  card_sat.kicad_pcb  card_sat.kicad_prl  card_sat.kicad_pro  card_sat.kicad_sch  card_sat.kicad_sch-bak  card_sat.net  fp-info-cache
assets/: missionlogic.drawio  software_specs.drawio
assets/Style Guide.pxd/: metadata.info
assets/Style Guide.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
assets/Style Guide.pxd/data/: 7C9180DA-7587-4501-A074-7C25DF341142
assets/circuit.pxd/: metadata.info
assets/circuit.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
assets/circuit.pxd/data/: 0F3A1B81-D1E2-41F2-A7EE-82E3B7347451  originalImportedContentDocumentInfo
assets/sat1.pxd/: metadata.info
assets/sat1.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
assets/sat1.pxd/data/: 7F3F98EA-C5B2-4FA6-BE14-CFA7C9404E5A
assets/sat2.pxd/: metadata.info
assets/sat2.pxd/QuickLook/: Icon.tiff  (+1 more)
assets/sat3.pxd/: metadata.info
assets/sat4.pxd/: metadata.info
assets/sat5.pxd/: metadata.info
assets/sat6.pxd/: metadata.info
assets/sat7.pxd/: metadata.info
code/: CmakeLists.txt  artic.py  bundle.py  getpos.py  main.c  main.py  mainMain.py  nonmain.py  uart.py  uart_example.py  uartz.py  zero.py
code/at851/: at851.ino
code/at853/: at853.ino
code/lib/: getpos.py  nonmain.py  uart.py
code/piolib/: CMakeCache.txt  CMakeLists.txt  uart.c  uart.h  uart_rx.c  uart_tx.c
code/piolib/uart_rx/: CMakeLists.txt
code/piolib/uart_tx/: uart_tx.c
wg.pxd/: metadata.info
wg.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
wg.pxd/data/: F5638634-3715-46C7-B624-65FC65739B0D
(+36 files in other folders)
